# python-sdk

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/kintsugi/: api.py  model.py  parsers.py
tests/: test_api.py
