[project]
name = "kintsugi-python"
version = "0.1.5"

description = "Python SDK to access Kintsugi Voice API V2."
authors = [
    {name = "Kintsugi Engineering Team", email = "python-sdk@kintsugihealth.com"},
]
dependencies = [
    "requests>=2.31.0",
    "pytest>=8.2.0",
]
requires-python = ">=3.8.0"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
